--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,168 +1,21 @@
-<!doctype html>
-<html lang="tr">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>YouTubeJam</title>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
     <style>
-      :root {
-        --bg: #0b0f17;
-        --card: rgba(255, 255, 255, 0.06);
-        --text: rgba(255, 255, 255, 0.92);
-        --muted: rgba(255, 255, 255, 0.65);
-        --blue: #2f7cf6;
-        --red: #ff3b3b;
-        --border: rgba(255, 255, 255, 0.10);
-        --shadow: 0 14px 40px rgba(0,0,0,0.45);
-      }
-
-      body {
-        margin: 0;
-        width: 320px;
-        background: radial-gradient(1000px 380px at 30% 0%, rgba(47,124,246,0.25), transparent 60%),
-                    radial-gradient(1000px 380px at 70% 10%, rgba(255,59,59,0.14), transparent 55%),
-                    var(--bg);
-        color: var(--text);
-        font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Apple Color Emoji", "Segoe UI Emoji";
-      }
-
-      .wrap {
-        padding: 14px 14px 16px;
-      }
-
-      .title {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        margin-bottom: 10px;
-      }
-
-      .logo {
-        width: 34px;
-        height: 34px;
-        border-radius: 10px;
-        background: linear-gradient(145deg, rgba(47,124,246,0.9), rgba(255,59,59,0.75));
-        box-shadow: var(--shadow);
-      }
-
-      .h1 {
-        font-size: 16px;
-        font-weight: 800;
-        letter-spacing: 0.2px;
-        line-height: 1.1;
-      }
-
-      .sub {
-        font-size: 12px;
-        color: var(--muted);
-        margin-top: 2px;
-      }
-
-      .card {
-        background: var(--card);
-        border: 1px solid var(--border);
-        border-radius: 14px;
-        padding: 12px;
-        box-shadow: var(--shadow);
-      }
-
-      .row {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        gap: 10px;
-      }
-
-      .status {
-        font-size: 12px;
-        color: var(--muted);
-      }
-
-      .pill {
-        font-size: 12px;
-        padding: 6px 10px;
-        border-radius: 999px;
-        border: 1px solid var(--border);
-        background: rgba(255,255,255,0.04);
-      }
-
-      .pill.connected {
-        border-color: rgba(47,124,246,0.55);
-        color: rgba(205,225,255,0.95);
-      }
-
-      .pill.disconnected {
-        border-color: rgba(255,59,59,0.55);
-        color: rgba(255,210,210,0.95);
-      }
-
-      .btn {
-        width: 100%;
-        margin-top: 12px;
-        border: 0;
-        outline: 0;
-        padding: 12px 12px;
-        border-radius: 12px;
-        font-size: 13px;
-        font-weight: 800;
-        cursor: pointer;
-        box-shadow: var(--shadow);
-        transition: transform 0.06s ease, filter 0.15s ease;
-      }
-
-      .btn:active { transform: translateY(1px); }
-
-      .btn.connect {
-        background: linear-gradient(180deg, rgba(47,124,246,1), rgba(47,124,246,0.78));
-        color: white;
-      }
-
-      .btn.disconnect {
-        background: linear-gradient(180deg, rgba(255,59,59,1), rgba(255,59,59,0.78));
-        color: white;
-      }
-
-      .hint {
-        margin-top: 10px;
-        font-size: 11px;
-        color: var(--muted);
-        line-height: 1.35;
-      }
-
-      .tiny {
-        margin-top: 8px;
-        font-size: 10px;
-        color: rgba(255,255,255,0.45);
-      }
+        body { width: 200px; font-family: sans-serif; padding: 10px; }
+        .status { color: green; font-weight: bold; }
+        input { width: 100%; margin-top: 5px; }
+        button { width: 100%; margin-top: 5px; cursor: pointer; }
     </style>
-  </head>
-  <body>
-    <div class="wrap">
-      <div class="title">
-        <div class="logo" aria-hidden="true"></div>
-        <div>
-          <div class="h1">YouTubeJam</div>
-          <div class="sub">Senkron izleme, demokratik kontrol 🎧</div>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="row">
-          <div class="status" id="statusText">Durum: -</div>
-          <div class="pill disconnected" id="statusPill">Kopuk</div>
-        </div>
-
-        <button class="btn connect" id="toggleBtn">Sunucuya Bağlan</button>
-
-        <div class="hint">
-          Not: Eklenti otomatik bağlanmaz. Butona basınca aktif YouTube sekmesinde başlar.
-        </div>
-        <div class="tiny">
-          Mixed-content yok: Sunucu adresin HTTPS (Ngrok) olmalı.
-        </div>
-      </div>
-    </div>
-
-    <script src="popup.js"></script>
-  </body>
+</head>
+<body>
+    <h3>Youtube Jam</h3>
+    <p>Durum: <span class="status">Bağlı</span></p>
+    <label>Oda İsmi:</label>
+    <input type="text" id="roomInput" value="vibe-room-1">
+    <button id="joinBtn">Odaya Katıl</button>
+    <hr>
+    <small>Batuhan ile dinlemeye hazır!</small>
+</body>
 </html>
