Popup ve Content Arasındaki İletişim

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -17,5 +17,6 @@
     <button id="joinBtn">Odaya Katıl</button>
     <hr>
     <small>Batuhan ile dinlemeye hazır!</small>
+    <script src="popup.js"></script>
 </body>
 </html>
