--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <style>
-        body { width: 200px; font-family: sans-serif; padding: 10px; }
-        .status { color: green; font-weight: bold; }
-        input { width: 100%; margin-top: 5px; }
-        button { width: 100%; margin-top: 5px; cursor: pointer; }
+        body { width: 250px; font-family: sans-serif; padding: 15px; text-align: center; }
+        h3 { color: #ff0000; margin-top: 0; }
+        input { width: 90%; padding: 8px; margin-bottom: 10px; }
+        button { width: 100%; padding: 10px; border: none; border-radius: 4px; cursor: pointer; margin-top: 5px; font-weight: bold;}
+        #joinBtn { background-color: #ff0000; color: white; }
+        #leaveBtn { background-color: #333; color: white; }
     </style>
 </head>
 <body>
-    <h3>Youtube Jam</h3>
-    <p>Durum: <span class="status">Bağlı</span></p>
-    <label>Oda İsmi:</label>
+    <h3>Youtube Jam 🎵</h3>
     <input type="text" id="roomInput" value="vibe-room-1">
-    <button id="joinBtn">Odaya Katıl</button>
-    <hr>
-    <small>Batuhan ile dinlemeye hazır!</small>
+    
+    <button id="joinBtn">ODAYA KATIL</button>
+    <button id="leaveBtn">ODADAN AYRIL</button>
+    
     <script src="popup.js"></script>
 </body>
 </html>
