feat: eklenti menusune gercek zamanli odadaki kisi sayaci eklendi

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <h3>YoutubeJam 🎵</h3>
+    <p id="countDisplay" style="color: #555; font-size: 14px; font-weight: bold; margin-bottom: 10px;">Odada: ? kişi</p>
     <input type="text" id="roomInput" value="vibe-room-1">
     
     <button id="joinBtn">ODAYA KATIL</button>
