Rename to JamRoom and update store-facing metadata (v1.1.2)

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <style>
@@ -12,12 +12,12 @@
     </style>
 </head>
 <body>
-    <h3>YoutubeJam 🎵</h3>
-    <p id="countDisplay" style="color: #555; font-size: 14px; font-weight: bold; margin-bottom: 10px;">Odada: ? kişi</p>
-    <input type="text" id="roomInput" value="vibe-room-1">
-    
-    <button id="joinBtn">ODAYA KATIL</button>
-    <button id="leaveBtn">ODADAN AYRIL</button>
+    <p id="countDisplay" style="color: #555; font-size: 14px; font-weight: bold; margin-bottom: 10px;">In room: ? users</p>
+
+    <input type="text" id="roomInput" value="room-1">
+
+    <button id="joinBtn">JOIN ROOM</button>
+    <button id="leaveBtn">LEAVE ROOM</button>
     
     <script src="popup.js" defer></script>
 </body>
